--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/0e8ceb485d.js" crossorigin="anonymous"></script>
+  <script src="https://sdk.scdn.co/spotify-player.js"></script>
 
 </head>
 <body>
